--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ egui_plot = "0.23.0"
 env_logger = "0.10.1"
 json = "0.12.4"
 log = "0.4.20"
-nalgebra = "0.32.3"
+nalgebra = {version = "0.32.3", features = ["serde-serialize"]}
 rfd = "0.12.1"
 getrandom = { version = "0.2.11", features = ["js"] }
 uuid = {version = "0.8.2", features = ["v4", "wasm-bindgen"]} # Fix wasm support for dxf
@@ -27,6 +27,8 @@ egui_glow = "0.23.0"
 glow = "0.13.0"
 uom = "0.35.0"
 evalexpr = "11.2.0"
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
