--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ uom = "0.35.0"
 evalexpr = "11.2.0"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
+printpdf = "0.6.0"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
